--- a/angular4/bootstrap/templates/user/form.html
+++ b/angular4/bootstrap/templates/user/form.html
@@ -19,10 +19,10 @@
               <label for="exampleInputEmail1">Username</label>
               <input type="text" class="form-control" ng-model="model.username" placeholder="Enter Username" required>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" ng-model="model.password" placeholder="Enter Password" required>
-            </div>
+            </div> -->
             <div class="form-group">
               <label for="exampleInputEmail1">Fullname</label>
               <input type="text" class="form-control" ng-model="model.fullname" placeholder="Enter Fullname" required>
