--- a/Node2/bootstrap/views/index.html
+++ b/Node2/bootstrap/views/index.html
@@ -161,7 +161,7 @@
     										<a href="#" class="btn btn-default btn-flat">Profile</a>
     									</div>
     									<div class="pull-right">
-    										<a href="#" class="btn btn-default btn-flat">Sign out</a>
+    										<a href= "/signout" class="btn btn-default btn-flat">Sign out</a>
     									</div>
     								</li>
     							</ul>
@@ -418,6 +418,7 @@
   <script src="scripts/dependencies/ui-bootstrap-tpls-0.13.4.js"></script>
   <script src="scripts/dependencies/angular-animate.js"></script>
   <script src="scripts/app.js"></script>
+  <script src="scripts/config.js"></script>
 
   <!-- Angular controllers -->
   <script src="scripts/controllers/baseCtrl.js"></script>
